@@ -256,4 +256,18 @@ class IMP_Ui_Mailbox
         return empty($new_subject) ? $subject : $new_subject;
     }
 
+    /**
+     * Determines if a message is a draft and can be resumed.
+     *
+     * @param array $flags  The list of IMAP flags.
+     *
+     * @return boolean  True if the message is a draft.
+     */
+    public function isDraft($flags = array())
+    {
+        return in_array('\\draft', $flags) ||
+               !empty($GLOBALS['conf']['user']['allow_resume_all']) ||
+               ($this->_mailbox == IMP::folderPref($GLOBALS['prefs']->getValue('drafts_folder'), true));
+    }
+
 }
