@@ -513,10 +513,7 @@ if (!empty($conf['user']['allow_view_source'])) {
     $a_template->set('view_source', $imp_contents->linkViewJS($imp_contents->getMIMEMessage(), 'view_source', _("_Message Source"), array('jstext' => _("Message Source"), 'css' => 'widget', 'widget' => true)));
 }
 
-if (!$disable_compose &&
-    (in_array('\\draft', $flags) ||
-     !empty($conf['user']['allow_resume_all']) ||
-     ($mailbox_name == IMP::folderPref($prefs->getValue('drafts_folder'), true)))) {
+if (!$disable_compose && $imp_ui->isDraft($flags)) {
     $a_template->set('resume', Horde::widget(IMP::composeLink(array(), array('actionID' => 'draft') + $compose_params), _("Resume"), 'widget', '', '', _("Resume"), true));
 }
 
